--- a/hasher-service.yaml
+++ b/hasher-service.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:  
   name: hasher 
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 80
       protocol: TCP
       targetPort: 80
-      nodePort: 38080
   selector:    
       app: hasher
