--- a/redis-service.yaml
+++ b/redis-service.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:  
   name: redis 
 spec:  
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 6379
       protocol: TCP
       targetPort: 6379
-      nodePort: 6379
   selector:    
       app: redis
