--- a/rng-service.yaml
+++ b/rng-service.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:  
   name: rng 
 spec:  
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 80
-      targetPort: 80
-      nodePort: 30080 
+      targetPort: 80 
   selector:    
       app: rng
   
