--- a/hasher-service.yaml
+++ b/hasher-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:  
   name: hasher 
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 80
       protocol: TCP
